--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,11 +1,10 @@
 <header>
     <ul class="nav">
-        <li><a href="/">Home</a></li>
+        <li><a href="/">YGDb</a></li>
         <li><a href="/youtubers">YouTubers</a></li>
         <li><a href="/games">Games</a></li>
         <li><a href="#">YouTuber Charts</a></li>
+        <li><a href="/profile/">Profile</a></li>
+        <li><a href="/logout">Logout</a></li>
     </ul>
 </header>
-<form action="/logout" method="get">
-    <button>Logout</button>
-</form>
