--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,6 +8,8 @@
 </form>
 <h2>Sign up to Join YGDb!</h2>
 <form action="/signup" method="post">
+    <input type="text" name="name" placeholder="Your Fullname">
+    <br>
     <input type="text" name="username" placeholder="Username">
     <br>
     <input type="password" name="password" placeholder="Create a password">
