--- a/views/game-profile.ejs
+++ b/views/game-profile.ejs
@@ -1,8 +1,7 @@
 <%- include('./partials/head.ejs') %>
-<br>
 <%- include('./partials/navbar.ejs') %>
+<br>
 <h1><%= game.name %></h1>
-<p>Genre:</p>
 <p><%= game.genre %></p>
 <img src="<%= game.photo_link %>" alt="<%= game.name %>" style="width:500px;">
 <p>Description:</p>
@@ -11,3 +10,24 @@
 <p><%= game.game_developer %></p>
 <p>Released year:</p>
 <p><%= game.released_year %></p>
+<h2>Who's YouTuber that play <%= game.name %>?</h2>
+<table>
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Photo</th>
+        </tr>
+    </thead>
+    <tbody>
+        <% game.YoutuberGames.forEach(el1 => { %>
+            <tr>
+                <% youtuber.forEach(el2 => { %>
+                    <% if (el1.youtuber_id === el2.id) { %>
+                        <td><a href="/youtuber-profile/<%= el2.name %>"><%= el2.name %></a></td>
+                        <td><img src="<%= el2.photo_link %>"></td>
+                    <% } %>
+                <% }) %>
+            </tr>
+        <% }) %>
+    </tbody>
+</table>
