--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,33 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
         * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
             font-family: 'Poppins', sans-serif;
-        }
-        header {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            background-color: brown;
-        }
-        header .nav {
-            position: relative;
-            display: flex;
-        }
-        header .nav li {
-            list-style: none;
-            margin-left: 70px;
-        }
-        header .nav li a {
-            color: #fff;
-            font-weight: 600;
-            text-decoration: none;
-        }
-        div {
-            margin: 80px 50px;
         }
         table {
             font-family: arial, sans-serif;
@@ -49,6 +23,109 @@
         tr:nth-child(even) {
             background-color: #dddddd;
         }
+
+        body{
+            margin-top: 50px;
+        }
+        a{
+            text-decoration: none;
+            color: brown;
+        }
+        #navbar{
+            list-style-type: none;
+            display: inline-block;
+            text-decoration: none;
+            width: 100vw;
+            background-color: brown;
+            color: #fff;
+            font-weight: bold;
+            font-family: 'Oswald', sans-serif;
+            padding: 0.5vw;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+        }
+        #navbar ul{
+            display: flex;
+        }
+
+        #navbar li{
+            list-style-type: none;
+            margin: 0 1vw;
+        }
+
+        #navbar li a{
+            padding: 1vw;
+            text-decoration: none;
+            color: #fff;
+        }
+
+        .body{
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .cards{
+            flex-direction: column;
+            display: flex;
+            border-radius: 5px;
+            margin: 78px;
+        }
+
+        .card-image{
+            display: flex;
+            justify-content: center;
+        }
+        .card-image img:hover{
+            width: 300px;
+            height: 460px;
+            cursor: pointer;
+        }
+        .card-image img{
+            border-top-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+            border-top-right-radius: 3px;
+            border-bottom-left-radius: 3px;
+        }
+
+        .item-name{
+            align-items: flex-start;
+            margin: 0 5px;
+            color: black;
+            font-weight: bold;
+            font-family: 'Oswald', sans-serif;
+        }
+
+        .item-name h5{
+            background-color: #fff;
+            color: black;
+            border-radius: 50px;
+            width: 20%;
+            align-items: center;
+            text-align: center;
+            padding: 0 px;
+        }
+
+        .item-name h5:hover{
+            background-color: black;
+            color: #fff;
+            font-weight: bold;
+        }
     </style>
 </head>
+<body>
+    <div>
+            <div id="navbar">
+                <ul>
+                    <li><a href="/" style="font-size: 30px;">YGDb</a></li>
+                    <li><a href="/youtubers">YouTubers</a></li>
+                    <li><a href="/games">Games</a></li>
+                    <li><a href="#">YouTuber Charts</a></li>
+                    <li><a href="/profile/">Profile</a></li>
+                    <li><a href="/logout">Logout</a></li>
+                </ul>
+            </div>
+    </div>
+</body>
 </html>
