--- a/views/login.ejs
+++ b/views/login.ejs
@@ -72,6 +72,9 @@
                 <h4><a href="/signup" class="login" style="color: black; text-decoration: none;">Sign Up</a></h4>
             </div>
         </div>
+        <% if (errors) { %>
+            <p style="color: brown;"><%= errors %></p>
+        <% } %>
         <form action="/login" method="post">
             <div class="input-text">
                     <input type="text" placeholder="Username" name="username"/>
