--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
     <title>YouTube Gaming Database</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -121,7 +122,7 @@
                     <li><a href="/" style="font-size: 30px;">YGDb</a></li>
                     <li><a href="/youtubers">YouTubers</a></li>
                     <li><a href="/games">Games</a></li>
-                    <li><a href="#">YouTuber Charts</a></li>
+                    <li><a href="/youtuber-charts">YouTuber Gaming Charts</a></li>
                     <li><a href="/profile/">Profile</a></li>
                     <li><a href="/logout">Logout</a></li>
                 </ul>
